--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
     "class-validator": "^0.14.1",
+    "glpk.js": "^4.0.2",
     "mysql2": "^3.10.0",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
